fix(testimonials): fix overflow

--- a/pages/main/styles/testimonials.css
+++ b/pages/main/styles/testimonials.css
@@ -182,6 +182,7 @@
   .testimonials div.testimonials {
     margin-top: 30px;
     grid-template-columns: repeat(4, calc((100% - 60px) / 3));
+    overflow: hidden;
   }
 
   .testimonials .testimonial .text {
@@ -222,7 +223,6 @@
     grid-template-rows: repeat(4, 109px);
     row-gap: 15px;
     height: calc(3 * 109px + 30px);
-    overflow-y: hidden;
   }
 
   .testimonials .testimonial .text {
